--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello Git
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>CaipiHomeA2</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root>Loading...</app-root>
+</body>
+</html>
